fix: overflow hidden for iframe embed
---------

--- a/src/style.scss
+++ b/src/style.scss
@@ -28,3 +28,8 @@
         }
     }
 }
+
+.annoto-playkit-plugin-iframe-embed-fix,
+.annoto-playkit-plugin-iframe-embed-fix body {
+    overflow: hidden;
+}
